--- a/page38.html
+++ b/page38.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section extMsg-box4 tab-content mbr-after-navbar" id="extMsg-box4-dg" data-rv-view="845" style="background-image: url(assets/images/mbr-8-1620x1080.jpg); padding-top: 150px; padding-bottom: 100px;">
+<section class="engine"><a href="https://mobirise.co/c">free site maker</a></section><section class="mbr-section extMsg-box4 tab-content mbr-after-navbar" id="extMsg-box4-dg" data-rv-view="845" style="background-image: url(assets/images/mbr-8-1620x1080.jpg); padding-top: 150px; padding-bottom: 100px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);">
     </div>
@@ -74,7 +74,7 @@
                             </span>
                         </div>
                         <div class="mbr-section-text lead text-center">
-                            <p>On Friday, December 8th, there was a showcase of the artwork of our IB senior art students, as well as the 10th grade students artwork and designs. There was an amazing turnout and everyone was very impressed with what our <br>students managed to create.</p>
+                            <p>On Friday, December 8th, there was a showcase of the artwork of our IB senior art students, as well as the 10th grade students artwork and designs. There was an amazing turnout and everyone was very impressed with what our students managed to create.</p>
                          </div>
 
                         
