--- a/Arts.html
+++ b/Arts.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="337" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/c">site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-2z" data-rv-view="337" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -144,12 +144,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/code-man.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/fullsizeoutput-254-2000x3000-800x1200.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Coming Soon</h4>
-                        <h5 class="card-subtitle">Who Will Write Next?</h5>
-                        <p class="card-text">More articles being written... literary genius takes time. :)</p>
-                        <div class="card-btn"><a href="page17.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">Daydream Nation: A Photo Series</h4>
+                        <h5 class="card-subtitle">Written By: Andreea Samareanu</h5>
+                        <p class="card-text">An expression through style</p>
+                        <div class="card-btn"><a href="page28.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
