--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="343" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-31" data-rv-view="343" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -73,17 +73,17 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">Daydream Nation: A Photo Series</h3>
+                            <h3 class="mbr-section-title display-2">December Site Contest</h3>
 
                             <div class="mbr-section-text">
-                                <p>An expression through style<br>photographed by Andreea Samareanu</p>
+                                <p>For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of Christmas break. The first 10 people to get all the answers correct or almost all correct will get a small prize.</p>
                             </div>
 
-                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page28.html">MORE</a> </div>
+                            <div class="mbr-section-btn"><a class="btn btn-secondary" href="page39.html">MORE</a> </div>
 
                         </div>
                         <div class="mbr-table-cell mbr-valign-top mbr-left-padding-md-up col-md-7 image-size" style="width: 50%;">
-                            <div class="mbr-figure"><img src="assets/images/fullsizeoutput-254-1400x2100.jpg"></div>
+                            <div class="mbr-figure"><img src="assets/images/mbr-1080x1080.jpg"></div>
                         </div>
 
                     </div>
