--- a/page39.html
+++ b/page39.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animate.css/animate.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise3-blocks-plugin/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -58,7 +58,19 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section mbr-section-nopadding extFeatures14 mbr-after-navbar" id="extFeatures14-ds" data-rv-view="1350" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="content5-dq" data-rv-view="1344" style="background-image: url(assets/images/mbr-1618x1080.jpg); padding-top: 120px; padding-bottom: 120px;">
+
+    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <h3 class="mbr-section-title display-2">December Site Context</h3>
+        <div class="lead">For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of Christmas break. The first 10 people to get all the answers correct or almost all correct will get a small prize.</div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section-nopadding extFeatures14" id="extFeatures14-ds" data-rv-view="1350" style="background-color: rgb(255, 255, 255);">
 
     
   <div class="container">
@@ -185,18 +197,6 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-dq" data-rv-view="1344" style="background-image: url(assets/images/mbr-1618x1080.jpg); padding-top: 120px; padding-bottom: 120px;">
-
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
-    </div>
-
-    <div class="container">
-        <h3 class="mbr-section-title display-2">December Site Context</h3>
-        <div class="lead">For the contest, answer the following questions by email to aidastinvanrijn@stjohns.be by the end of December break. The first 10 to get the answers correct or almost all correct will get a small prize.</div>
-    </div>
-
-</section>
-
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-dp" data-rv-view="1343" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
@@ -208,11 +208,11 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/mobirise3-blocks-plugin/js/script.js"></script>
   
